force-app/main/default/objects/EY_Master_Data__mdt/EY_Master_Data__mdt.object-meta.xml
<CustomObject>
    <label>EY Master Data</label>
    <pluralLabel>EY Master Data</pluralLabel>
</CustomObject>