force-app/main/default/objects/EY_Master_Data__mdt/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>