force-app/main/default/objects/EY_Master_Data__mdt/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <label>Charge Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>