force-app/main/default/objects/EY_Master_Data__mdt/fields/COA_Revenue_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>COA_Revenue_Sub_Account__c</fullName>
    <label>COA Revenue Sub Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>