force-app/main/default/objects/EY_Master_Data__mdt/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <label>Material Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>