force-app/main/default/objects/EY_Master_Data__mdt/fields/Nature_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Service__c</fullName>
    <label>Nature Of Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>